<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    tools:context=".ui.AudioListActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        style="@style/txtMedium_12Style"
        android:paddingVertical="@dimen/_20sdp"
        android:text="@string/create_podcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:background="@drawable/bg_white_top_radius_16"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView"
        android:layout_margin="@dimen/_8sdp"
        tools:itemCount="2"
        android:overScrollMode="never"
        tools:listitem="@layout/raw_audio_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/cardRecord"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/gray_d3"
        android:visibility="visible"
        tools:visibility="gone"
        android:id="@+id/imgAudioNoData"
        app:layout_constraintBottom_toTopOf="@+id/cardRecord"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/ic_baseline_keyboard_voice_24" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecord"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        app:cardBackgroundColor="@color/bg_icon"
        app:cardElevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardImportFile">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_keyboard_voice_24" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/txtMedium_10Style"
        android:textColor="@color/colorTitle"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardRecord"
        app:layout_constraintStart_toStartOf="@+id/cardRecord"
        app:layout_constraintTop_toBottomOf="@+id/cardRecord"
        android:text="@string/record"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImportFile"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        app:cardBackgroundColor="@color/bg_icon"
        app:cardElevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardRecord"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_folder_24" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/txtMedium_10Style"
        android:textColor="@color/colorTitle"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardImportFile"
        app:layout_constraintStart_toStartOf="@+id/cardImportFile"
        app:layout_constraintTop_toBottomOf="@+id/cardImportFile"
        android:text="@string/import_files"/>

</androidx.constraintlayout.widget.ConstraintLayout>